--- a/bitrix/templates/main/card.html
+++ b/bitrix/templates/main/card.html
@@ -100,5 +100,6 @@
     <script src="js/bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.60/jquery.form-validator.min.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
