--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -62,7 +62,7 @@
                 <path fill="#D7D7D7" fill-rule="evenodd" d="M0 26.2h45.9v.4H0zm73.5 0h45.9v.4H73.5z" clip-path="url(#h)" clip-rule="evenodd"></path>
               </svg>
             </div>
-            <form class="js-validate form anim-cont" action="_scripts/send_mail.php">
+            <form class="js-validate form send-mail anim-cont" action="_scripts/send_mail.php">
               <div class="title">Хотите клубную карту?</div>
               <div class="text">Заполните анкетные данные и мы вам перезвоним</div>
               <div class="input-item">
@@ -193,5 +193,6 @@
     <script src="js/bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.60/jquery.form-validator.min.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
