--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -29,3 +29,4 @@ html
     script(src="js/bundle.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.60/jquery.form-validator.min.js")
     script(src="js/common.js")
+    script(src="js/custom.js")
